# lindera-tantivy

./: .gitignore  AUTHORS  CHANGES.md  Cargo.toml  Makefile  README.md
.github/workflows/: CI.yml  periodic.yml  regression.yml  release.yml
benches/: bench.rs
examples/: basic_example.rs  cc-cedict.rs  cc-cedict_example.rs  ipadic.rs  ipadic_example.rs  ko-dic.rs  ko-dic_example.rs  lindera.yml  tokenize_with_config.rs  unidic.rs  unidic_example.rs
src/: dictionary.rs  lib.rs  mode.rs  stream.rs  tokenizer.rs
