[package]
name = "lindera-tantivy"
version = "0.44.0"
edition = "2021"
description = "Lindera Tokenizer for Tantivy."
documentation = "https://docs.rs/lindera-tantivy"
homepage = "https://github.com/lindera/lindera-tantivy"
repository = "https://github.com/lindera/lindera-tantivy"
readme = "README.md"
keywords = ["tokenizer", "tantivy", "lindera"]
categories = ["text-processing"]
license = "MIT"

[features]
ipadic = ["lindera/ipadic"] # Include Japanese dictionary (IPADIC)
ipadic-neologd = [
    "lindera/ipadic-neologd",
] # Include Japanese dictionary (IPADIC NEologd)
unidic = ["lindera/unidic"] # Include Japanese dictionary (UniDic)
ko-dic = ["lindera/ko-dic"] # Include Korean dictionary (ko-dic)
cc-cedict = ["lindera/cc-cedict"] # Include Chinese dictionary (CC-CEDICT)
default = [] # No directories included

[dependencies]
tantivy-tokenizer-api = "0.5.0"
tantivy = "0.24.1"

lindera = "0.44.0"

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
tantivy = "0.24.1"

[[bench]]
name = "bench"
harness = false

[profile.release]
lto = true

# Make sure that the build scripts and proc-macros are compiled with
# all the optimizations. It speeds up the flate2 crate that we use in our build scripts.
[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3
[profile.bench.build-override]
opt-level = 3
[profile.test.build-override]
opt-level = 3
