[package]
name = "lindera-tantivy"
version = "1.0.0"
edition = "2024"
description = "Lindera Tokenizer for Tantivy."
documentation = "https://docs.rs/lindera-tantivy"
homepage = "https://github.com/lindera/lindera-tantivy"
repository = "https://github.com/lindera/lindera-tantivy"
readme = "README.md"
keywords = ["tokenizer", "tantivy", "lindera"]
categories = ["text-processing"]
license = "MIT"

[features]
embedded-ipadic = [
    "lindera/embedded-ipadic",
] # Include Japanese dictionary (IPADIC)
embedded-ipadic-neologd = [
    "lindera/embedded-ipadic-neologd",
] # Include Japanese dictionary (IPADIC NEologd)
embedded-unidic = [
    "lindera/embedded-unidic",
] # Include Japanese dictionary (UniDic)
embedded-ko-dic = [
    "lindera/embedded-ko-dic",
] # Include Korean dictionary (ko-dic)
embedded-cc-cedict = [
    "lindera/embedded-cc-cedict",
] # Include Chinese dictionary (CC-CEDICT)
default = [] # No directories included

[dependencies]
tantivy-tokenizer-api = "0.6.0"
tantivy = "0.25.0"


lindera = "1.1.0"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
tantivy = "0.25.0"

[[bench]]
name = "bench"
harness = false

[profile.release]
lto = true

# Make sure that the build scripts and proc-macros are compiled with
# all the optimizations. It speeds up the flate2 crate that we use in our build scripts.
[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3
[profile.bench.build-override]
opt-level = 3
[profile.test.build-override]
opt-level = 3
