[package]
name = "lindera-tantivy"
version = "2.0.0"
edition = "2024"
description = "Lindera Tokenizer for Tantivy."
documentation = "https://docs.rs/lindera-tantivy"
homepage = "https://github.com/lindera/lindera-tantivy"
repository = "https://github.com/lindera/lindera-tantivy"
readme = "README.md"
keywords = ["tokenizer", "tantivy", "lindera"]
categories = ["text-processing"]
license = "MIT"

[features]
embed-ipadic = [
    "lindera/embed-ipadic",
] # Include Japanese dictionary (IPADIC)
embed-ipadic-neologd = [
    "lindera/embed-ipadic-neologd",
] # Include Japanese dictionary (IPADIC NEologd)
embed-unidic = [
    "lindera/embed-unidic",
] # Include Japanese dictionary (UniDic)
embed-ko-dic = [
    "lindera/embed-ko-dic",
] # Include Korean dictionary (ko-dic)
embed-cc-cedict = [
    "lindera/embed-cc-cedict",
] # Include Chinese dictionary (CC-CEDICT)
default = [] # No directories included

[dependencies]
tantivy-tokenizer-api = "0.6.0"
tantivy = "0.25.0"


lindera = "2.0.1"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
tantivy = "0.25.0"

[[bench]]
name = "bench"
harness = false

[profile.release]
lto = true

# Make sure that the build scripts and proc-macros are compiled with
# all the optimizations. It speeds up the flate2 crate that we use in our build scripts.
[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3
[profile.bench.build-override]
opt-level = 3
[profile.test.build-override]
opt-level = 3
